--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "\n",
     "\n",
-    "In {ref}`concrete_rules_of_thumb` we can find rules of thumb for the estimation of height and width of a reinforced concrete beam. As we chose for two single spans, and the beam is traditionally reinforced and not prestressed the rule of thumbs gives:\n",
+    "In {ref}`concrete_rules_of_thumb` we can find rules of thumb for the estimation of height and width of a reinforced concrete beam. As we chose for two single spans, and the beam is traditionally reinforced and not prestressed the rule of thumbs gives:  \n",
     "\n",
     "$h = \\frac{L}{8}$ to $\\frac{L}{12}$  \n",
     "$b = \\frac{h}{3}$ to $\\frac{h}{2}$ \n",
@@ -69,12 +69,12 @@
     "W = \\frac{I}{\\frac{1}{2} h} = \\frac{1}{6} × b × h² \\ [mm³]\n",
     "\\end{gather*}\n",
     "\n",
-    "First, we need to estimate the dimensions. For the concrete structure, we use a cast in-situ (cast on site), non-prestressed concrete beam. Let's assume a strength class C20/25. According to the rules of thumb above, the height h would be equal to approximately:\n",
+    "First, we need to estimate the dimensions. For the concrete structure, we use a cast in-situ (cast on site), non-prestressed concrete beam. Let's assume a strength class C20/25. According to the rules of thumb above, the height h would be equal to approximately:  \n",
     "$$\n",
     "h = L/10 = \\frac{6000}{10} = 600 \\ [mm]\n",
     "$$ \n",
     "\n",
-    "For the width, we choose:\n",
+    "For the width, we choose:  \n",
     "$$\n",
     "b = h/2 = \\frac{600}{2} = 300 \\ [mm]\n",
     "$$ \n",
@@ -137,13 +137,13 @@
     "Loads on the beam\n",
     "```\n",
     "\n",
-    "$q_{self}$ and $q_{resting}$ together form the characteristic permanent load $G_k$. The imposed variable load $q_{ivl}$ is the characteristic variable load $Q_k$ (using the abbreviations from the Eurocode). For beam verification, the loads must be calculated per linear meter on the beam, unless the load is applied as a point load on the beam. We assume a uniformly distributed load.\n",
+    "$q_{self}$ and $q_{resting}$ together form the characteristic permanent load $G_k$. The imposed variable load $q_{imp}$ is the characteristic variable load $Q_k$ (using the abbreviations from the Eurocode). For beam verification, the loads must be calculated per linear meter on the beam, unless the load is applied as a point load on the beam. We assume a uniformly distributed load.\n",
     "\n",
     "```{note}\n",
     "To determine the amount of floor area resting on our beam, we use the schematic load-bearing floor plan. On it, we have shaded the area supported by the beam. All elements in the shaded area, including the weight of any secondary beams, must be included in the load. On this load-bearing floor plan we also show the actual dimensions.\n",
     "```\n",
     "\n",
-    "The resting load consists of the weight of the floor structure, including the weight of any finishing layer, ceiling, installations (air ducts, water pipes, electricity and data cables, also know as _building services_) suspended from the floor, or included in the floor structure, etc. All these loads are given in [kN/m²] or can be converted into them. For example, for a concrete overlay, the volumetric mass [kg/m³] can be converted to the volumetric weight [kN/m³]: $1 [kg/m³]$corresponds to $0.01 [kN/m³]$. The volumetric weight should then be multiplied by the layer thickness to get the load in [kN/m²]:\n",
+    "The resting load consists of the weight of the floor structure, including the weight of any finishing layer, ceiling, installations (air ducts, water pipes, electricity and data cables, also know as _building services_) suspended from the floor, or included in the floor structure, etc. All these loads are given in kN/m² or have to be converted into these units. For example, for a concrete overlay, the volumetric *mass* kg/m³ should be converted to the volumetric *weight* kN/m³: 1 kg/m³ corresponds to 0.01 kN/m³. The volumetric weight should is then multiplied by the layer thickness to arrive at the load in kN/m²:\n",
     "\n",
     "$\\Rightarrow$ Load in [kN/m²] = layer thickness in meters multiplied by the load in [kN/m³].\n",
     "\n",
@@ -156,21 +156,21 @@
     "Cross-section of floor system and beam\n",
     "```\n",
     "\n",
-    "From top to bottom, we first see a finish layer of $50 [mm]$. The volumetric mass of the finish layer material is $2400 [kg/m³]$.\n",
+    "From top to bottom, we first see a finish layer of $50 \\ [mm]$. The volumetric mass of the finish layer material is $2400 \\ [kg/m³]$.\n",
     "\n",
-    "$\\Rightarrow$ Weight of finish layer = $0.05 [m] × 2400 [kg/m³] = 120 [kg/m²]$ $\\Rightarrow$ $0.01 × 120 [kg/m²] = 1.2 [kN/m²]$.\n",
+    "$\\Rightarrow$ Weight of finish layer = $0.05 \\ [m] × 2400 \\ [kg/m³] = 120 \\ [kg/m²]$ $\\Rightarrow$ $0.01 × 120 \\ [kg/m²] = 1.2 \\ [kN/m²]$.\n",
     "\n",
     "Next, we see the precast concrete floor slab. The dimensions of these slabs depend on the span and load on the slabs and on the building function. When these are known, the manufacturer can easily determine which slabs are needed. The span here is 8 meters (that is the center-to-center distance of the main beams!).\n",
     "\n",
-    "Considering the cross-sections, it is easy to see that besides a imposed load of $3 kN/m²$, the floor slab must also support the finish layer, pipes, ceiling, and lighting.\n",
+    "Considering the cross-sections, it is easy to see that besides a imposed load of $3$ kN/m², the floor slab must also support the finish layer, pipes, ceiling, and lighting.\n",
     "\n",
-    "The mass of ceiling and installation totals $15 [kg/m²] + 45 [kg/m²] = 60 [kg/m²]$.\n",
+    "The mass of ceiling and installation totals $15 \\ [kg/m²] + 45 \\ [kg/m²] = 60 \\ [kg/m²]$.\n",
     "\n",
-    "The weight then becomes $\\Rightarrow$ $0.01 × 60 [kg/m²] = 0.6 [kN/m²]$.\n",
+    "The weight then becomes $\\Rightarrow$ $0.01 × 60 \\ [kg/m²] = 0.6 \\ [kN/m²]$.\n",
     "\n",
-    "The total load on the floor slabs then becomes $\\Rightarrow$ $3 [kN/m²] + 1.2 [kN/m²] + 0.6 [kN/m²] = 4.8 [kN/m²]$.\n",
+    "The total (variable + permanent) load on the floor slabs then becomes $\\Rightarrow$ $3 + 1.2 + 0.6 = 4.8 [kN/m²]$.\n",
     "\n",
-    "These data can be provided to the manufacturer. For a design calculation, the manufacturer often provides tables or graphs. In Chapter \\ref{ontwerp-beton}, a graph is shown. On the vertical axis, we plot the load of $4.8 [kN/m²]$ and on the horizontal axis the span of $8 meters$. The intersection of both lines lies between the slab with a thickness of $150 [mm]$ and that with a thickness of $200 [mm]$. Therefore, for our building, we need a slab thickness of $200 [mm]$. The weight of this slab is $3.1 [kN/m²]$.\n",
+    "These data can be provided to the manufacturer. For a design calculation, the manufacturer often provides tables or graphs. In section \\ref{hollow_core_slabs}, such a graph is shown. On the vertical axis, we plot the load of $4.8 \\ [kN/m²]$ and on the horizontal axis the span of $8 meters$. The intersection of both lines lies between the slab with a thickness of $150 \\ [mm]$ and that with a thickness of $200 \\ [mm]$. Therefore, for our building, we need a slab thickness of $200 [mm]$. The weight of this slab is $3.1 \\ [kN/m²]$.\n",
     "\n",
     "So, the total permanent load of the floor is $3.1 [kN/m²] + 1.2 [kN/m²] + 0.6 [kN/m²] = 4.9 [kN/m²]$.\n",
     "\n",
