--- a/book/design/concrete/C06_hollow_core_slabs.ipynb
+++ b/book/design/concrete/C06_hollow_core_slabs.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(hollow_core_slabs)=\n",
     "# Hollow core slabs"
    ]
   },
