--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -27,7 +27,7 @@
     "Schematic load-bearing floor plan, first floor office building. In our example, a = 8 m and b = 6 m.\n",
     "```\n",
     "\n",
-    "The beam on axis 3 as shown in the floor plan is interupted by the column on D3. This suggest that the structural scheme of axis 3 is the top one from the two possible schemes shown in the image below. The lower one would have been a continuous beam supported in the middle.\n",
+    "The beam on axis 3 as shown in the floor plan is interupted by the column on D3. This means that the structural scheme of axis 3 is the top one from the two possible schemes shown in the image below. The lower one would have been a continuous beam supported in the middle.\n",
     "\n",
     "````{margin}\n",
     "**Schematisation structural system**\n",
@@ -54,14 +54,13 @@
     "```\n",
     "````\n",
     "\n",
-    "\n",
-    "\n",
     "In {ref}`concrete_rules_of_thumb` we can find rules of thumb for the estimation of height and width of a reinforced concrete beam. As we chose for two single spans, and the beam is traditionally reinforced and not prestressed the rule of thumbs gives:  \n",
     "\n",
-    "$h = \\frac{L}{8}$ to $\\frac{L}{12}$  \n",
-    "$b = \\frac{h}{3}$ to $\\frac{h}{2}$ \n",
+    "<p style=\"text-align: center;\">\n",
+    "$h = \\frac{L}{8}$ to $\\frac{L}{12}$ and $b = \\frac{h}{3}$ to $\\frac{h}{2}$  \n",
+    "</p>\n",
     "\n",
-    "The weight per linear meter is now determined by multiplying the cross-sectional area $b$ × $h$ $[m^2]$ by the density $ρ \\ [kg/m³]$, and then multiply the result by the gravitational acceleration $9.81 \\ [m/s^2]$, often rounded to $10 \\ [m/s^2]$ for early design calculations. For reinforced concrete the density is around $2500 \\ [kg/m³]$. The weight per linear meter $q_g$ becomes: $q_g = b × h × ρ × \\frac{10}{1000} \\ [kN/m]$. (NB: $b$ and $h$ in meters!)\n",
+    "The weight per linear meter is now determined by multiplying the cross-sectional area $b$ × $h$ m² by the density $ρ$ kg/m³, and then multiply the result by the gravitational acceleration $9.81$ m/s², often rounded to $10$ m/s² for early design calculations. For reinforced concrete the density is around $2500$ kg/m³. The weight per linear meter $q_g$ becomes: $q_g = b × h × ρ × \\frac{10}{1000}$ kN/m. (NB: $b$ and $h$ in meters!)\n",
     "\n",
     "For a rectangular cross-section, we can easily calculate the resistance moment (also known as section modulus) $W$ and the quadratic area moment $I$. We need these later to verify stresses and deflection:\n",
     "\\begin{gather*}\n",
@@ -69,12 +68,14 @@
     "W = \\frac{I}{\\frac{1}{2} h} = \\frac{1}{6} × b × h² \\ [mm³]\n",
     "\\end{gather*}\n",
     "\n",
-    "First, we need to estimate the dimensions. For the concrete structure, we use a cast in-situ (cast on site), non-prestressed concrete beam. Let's assume a strength class C20/25. According to the rules of thumb above, the height h would be equal to approximately:  \n",
+    "First, we need to estimate the dimensions. For the concrete structure, we use a cast in-situ (cast on site), non-prestressed concrete beam. Let's assume a strength class C20/25. According to the rules of thumb above, the height h would be equal to approximately:\n",
+    "\n",
     "$$\n",
     "h = L/10 = \\frac{6000}{10} = 600 \\ [mm]\n",
     "$$ \n",
     "\n",
     "For the width, we choose:  \n",
+    "\n",
     "$$\n",
     "b = h/2 = \\frac{600}{2} = 300 \\ [mm]\n",
     "$$ \n",
@@ -103,7 +104,7 @@
     "| 600            | 600x300       | 4.5           | 540 000  |18 000 |         C20/25 |         1.5 |       30 000 |\n",
     "```\n",
     "\n",
-    "```{admonition}\n",
+    "```{note}\n",
     "It is good to notice that for the strength we did not use the _compressive_ but the characteristic _tensile_ strength of the concrete, as the latter is rather lower than the former. In a beam loaded on bending, the tension stresses in the part of the concrete generally that is under tension (that is: below the neutral line for a positive bending moment) are much higher than the tensile strength, so that reinforcement will need to take over, as we will see below. For this reason we will also provide a rule of thumb to approximate the amount of bending reinforcement necessary. To save time, you could even skip the check on bending stresses and directly move on to determining the reinforcement.\n",
     "```"
    ]
