--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -56,11 +56,15 @@
     "\n",
     "In {ref}`concrete_rules_of_thumb` we can find rules of thumb for the estimation of height and width of a reinforced concrete beam. As we chose for two single spans, and the beam is traditionally reinforced and not prestressed the rule of thumbs gives:  \n",
     "\n",
-    "<p style=\"text-align: center;\">\n",
-    "$h = \\frac{L}{8}$ to $\\frac{L}{12}$ and $b = \\frac{h}{3}$ to $\\frac{h}{2}$  \n",
-    "</p>\n",
+    "$$\n",
+    "h = \\frac{L}{8} to \\frac{L}{12}  \n",
+    "$$\n",
     "\n",
-    "The weight per linear meter is now determined by multiplying the cross-sectional area $b$ × $h$ m² by the density $ρ$ kg/m³, and then multiply the result by the gravitational acceleration $9.81$ m/s², often rounded to $10$ m/s² for early design calculations. For reinforced concrete the density is around $2500$ kg/m³. The weight per linear meter $q_g$ becomes: $q_g = b × h × ρ × \\frac{10}{1000}$ kN/m. (NB: $b$ and $h$ in meters!)\n",
+    "$$\n",
+    "b = \\frac{h}{3} to \\frac{h}{2}  \n",
+    "$$\n",
+    "\n",
+    "The weight per linear meter is now determined by multiplying the cross-sectional area $b$ × $h$ m² by the density $ρ$ kg/m³, and then multiply the result by the gravitational acceleration $g = 9.81$ m/s², often rounded to $10$ m/s² for early design calculations. For reinforced concrete the density is around $2500$ kg/m³. The weight per linear meter $q_g$ becomes: $q_g = b × h × ρ × \\frac{10}{1000}$ kN/m. (NB: $b$ and $h$ in meters!)\n",
     "\n",
     "For a rectangular cross-section, we can easily calculate the resistance moment (also known as section modulus) $W$ and the quadratic area moment $I$. We need these later to verify stresses and deflection:\n",
     "\\begin{gather*}\n",
