--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -84,7 +84,7 @@
     "b = h/2 = \\frac{600}{2} = 300 \\ [mm]\n",
     "$$ \n",
     "\n",
-    "The weight per linear meter is then $0.30 \\ [m] × 0.60 \\ [m] × 2500 \\ [kg/m³] × 10 \\ [m/s²] / 1000 = 4.5 \\ [kN/m].$ \n",
+    "The weight per linear meter is then $0.30 × 0.60 × 2500 × 10/1000 = 4.5$ kN/m.\n",
     "\n",
     "```{tip}\n",
     "You can skip this part if you want to directly determine loads and reinforcement, as in nearly all cases tensile strength is exceeded and reinforcement is required. Continue with 'Determining loads on the beam'. However, if you also want to check deflections, then continue here, as you will need $I_y$.\n",
@@ -137,15 +137,15 @@
     "\n",
     "```{figure} Images/Loads_Beam.jpg\n",
     "---\n",
-    "scale: 65%\n",
+    "scale: 75%\n",
     "---\n",
     "Loads on the beam\n",
     "```\n",
     "\n",
-    "$q_{self}$ and $q_{resting}$ together form the characteristic permanent load $G_k$. The imposed variable load $q_{imp}$ is the characteristic variable load $Q_k$ (using the abbreviations from the Eurocode). For beam verification, the loads must be calculated per linear meter on the beam, unless the load is applied as a point load on the beam. We assume a uniformly distributed load.\n",
+    "$q_{self}$ and $q_{resting}$ together form the characteristic permanent load $G_k$. The imposed variable load $q_{imposed}$ is the characteristic variable load $Q_k$ (using the abbreviations from the Eurocode). For beam verification, the loads must be calculated per linear meter on the beam, unless the load is applied as a point load on the beam. We assume a uniformly distributed load.\n",
     "\n",
     "```{note}\n",
-    "To determine the amount of floor area resting on our beam, we use the schematic load-bearing floor plan. On it, we have shaded the area supported by the beam. All elements in the shaded area, including the weight of any secondary beams, must be included in the load. On this load-bearing floor plan we also show the actual dimensions.\n",
+    "To determine the amount of floor area resting on our beam, we use the schematic load-bearing floor plan (e.g. {numref}`floor_plan_with_shaded_area`). On it, we have shaded the area supported by the beam. All elements in the shaded area, including the weight of any secondary beams, must be included in the load. On this load-bearing floor plan we also show the actual dimensions.\n",
     "```\n",
     "\n",
     "The resting load consists of the weight of the floor structure, including the weight of any finishing layer, ceiling, installations (air ducts, water pipes, electricity and data cables, also know as _building services_) suspended from the floor, or included in the floor structure, etc. All these loads are given in kN/m² or have to be converted into these units. For example, for a concrete overlay, the volumetric *mass* kg/m³ should be converted to the volumetric *weight* kN/m³: 1 kg/m³ corresponds to 0.01 kN/m³. The volumetric weight should is then multiplied by the layer thickness to arrive at the load in kN/m²:\n",
@@ -158,7 +158,7 @@
     "---\n",
     "scale: 25%\n",
     "---\n",
-    "Cross-section of floor system and beam\n",
+    "Cross-section of hollow-core concrete slab system and steel beam\n",
     "```\n",
     "\n",
     "From top to bottom, we first see a finish layer of $50 \\ [mm]$. The volumetric mass of the finish layer material is $2400 \\ [kg/m³]$.\n",
@@ -182,6 +182,7 @@
     "```{figure} Images/Load-Bearing_Floor_Plan_Loads.jpg\n",
     "---\n",
     "scale: 75%\n",
+    "name: floor_plan_with_shaded_area\n",
     "---\n",
     "The shaded area of the floor is the area supported by the beam on axis 3\n",
     "```\n",
