--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -156,26 +156,24 @@
     "\n",
     "```{figure} Images/Concrete_Hollow_Core_Slab_Structure.jpg\n",
     "---\n",
-    "scale: 25%\n",
+    "scale: 35%\n",
     "---\n",
     "Cross-section of hollow-core concrete slab system and steel beam\n",
     "```\n",
     "\n",
-    "From top to bottom, we first see a finish layer of $50 \\ [mm]$. The volumetric mass of the finish layer material is $2400 \\ [kg/m³]$.\n",
+    "From top to bottom, we first see a finish layer of 50 mm. The volumetric mass of the finish layer material (usually a mixture of sand and cement) is 2000 kg/m³.\n",
     "\n",
-    "$\\Rightarrow$ Weight of finish layer = $0.05 \\ [m] × 2400 \\ [kg/m³] = 120 \\ [kg/m²]$ $\\Rightarrow$ $0.01 × 120 \\ [kg/m²] = 1.2 \\ [kN/m²]$.\n",
+    "$\\Rightarrow$ Weight of finish layer = $0.05 × 2000 = 100 \\ [kg/m²]$ $\\Rightarrow$ $0.01 × 100 \\ [kg/m²] = 1.0 \\ [kN/m²]$.\n",
     "\n",
-    "Next, we see the precast concrete floor slab. The dimensions of these slabs depend on the span and load on the slabs and on the building function. When these are known, the manufacturer can easily determine which slabs are needed. The span here is 8 meters (that is the center-to-center distance of the main beams!).\n",
+    "Next, we see the precast concrete floor slab. The dimensions of these slabs depend on the span and load on the slabs and on the building function. When these are known, the manufacturer can easily determine which slabs are needed. The span here is 8 meters (that is the center-to-center distance of the main beams!). Considering the cross-sections, it is easy to see that besides an imposed load of $3$ kN/m², the floor slab must also support the finish layer, pipes, ceiling, and lighting.\n",
     "\n",
-    "Considering the cross-sections, it is easy to see that besides a imposed load of $3$ kN/m², the floor slab must also support the finish layer, pipes, ceiling, and lighting.\n",
+    "The mass of ceiling and installation totals $15 + 45 = 60 \\ [kg/m²]$.\n",
     "\n",
-    "The mass of ceiling and installation totals $15 \\ [kg/m²] + 45 \\ [kg/m²] = 60 \\ [kg/m²]$.\n",
+    "The weight then becomes $\\Rightarrow$ $0.01 × 60 = 0.6 \\ [kN/m²]$.\n",
     "\n",
-    "The weight then becomes $\\Rightarrow$ $0.01 × 60 \\ [kg/m²] = 0.6 \\ [kN/m²]$.\n",
+    "The total (variable + permanent) load on the floor slabs then becomes $\\Rightarrow$ $3 + 1.0 + 0.6 = 4.6 [kN/m²]$.\n",
     "\n",
-    "The total (variable + permanent) load on the floor slabs then becomes $\\Rightarrow$ $3 + 1.2 + 0.6 = 4.8 [kN/m²]$.\n",
-    "\n",
-    "These data can be provided to the manufacturer. For a design calculation, the manufacturer often provides tables or graphs. In section \\ref{hollow_core_slabs}, such a graph is shown. On the vertical axis, we plot the load of $4.8 \\ [kN/m²]$ and on the horizontal axis the span of $8 meters$. The intersection of both lines lies between the slab with a thickness of $150 \\ [mm]$ and that with a thickness of $200 \\ [mm]$. Therefore, for our building, we need a slab thickness of $200 [mm]$. The weight of this slab is $3.1 \\ [kN/m²]$.\n",
+    "These data can be provided to the manufacturer. For a design calculation, the manufacturer often provides tables or graphs. In section \\ref{`hollow_core_slabs`}, such a graph is shown. On the vertical axis, we plot the load of 4.6 kN/m² and on the horizontal axis the span of $8 meters$. The intersection of both lines lies between the slab with a thickness of $150 \\ [mm]$ and that with a thickness of $200 \\ [mm]$. Therefore, for our building, we need a slab thickness of $200 [mm]$. The weight of this slab is $3.1 \\ [kN/m²]$.\n",
     "\n",
     "So, the total permanent load of the floor is $3.1 [kN/m²] + 1.2 [kN/m²] + 0.6 [kN/m²] = 4.9 [kN/m²]$.\n",
     "\n",
