--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -57,11 +57,11 @@
     "In {ref}`concrete_rules_of_thumb` we can find rules of thumb for the estimation of height and width of a reinforced concrete beam. As we chose for two single spans, and the beam is traditionally reinforced and not prestressed the rule of thumbs gives:  \n",
     "\n",
     "$$\n",
-    "h = \\frac{L}{8} to \\frac{L}{12}  \n",
+    "h = \\frac{L}{8} \\ to \\ \\frac{L}{12}  \n",
     "$$\n",
     "\n",
     "$$\n",
-    "b = \\frac{h}{3} to \\frac{h}{2}  \n",
+    "b = \\frac{h}{3} \\ to \\ \\frac{h}{2}  \n",
     "$$\n",
     "\n",
     "The weight per linear meter is now determined by multiplying the cross-sectional area $b$ × $h$ m² by the density $ρ$ kg/m³, and then multiply the result by the gravitational acceleration $g = 9.81$ m/s², often rounded to $10$ m/s² for early design calculations. For reinforced concrete the density is around $2500$ kg/m³. The weight per linear meter $q_g$ becomes: $q_g = b × h × ρ × \\frac{10}{1000}$ kN/m. (NB: $b$ and $h$ in meters!)\n",
@@ -84,7 +84,7 @@
     "b = h/2 = \\frac{600}{2} = 300 \\ [mm]\n",
     "$$ \n",
     "\n",
-    "The weight per linear meter is then $0.30 × 0.60 × 2500 × 10/1000 = 4.5$ kN/m.\n",
+    "The weight per linear meter becomes: $0.30 × 0.60 × 2500 × 10/1000 = 4.5$ kN/m.\n",
     "\n",
     "```{tip}\n",
     "You can skip this part if you want to directly determine loads and reinforcement, as in nearly all cases tensile strength is exceeded and reinforcement is required. Continue with 'Determining loads on the beam'. However, if you also want to check deflections, then continue here, as you will need $I_y$.\n",
@@ -145,12 +145,12 @@
     "$q_{self}$ and $q_{resting}$ together form the characteristic permanent load $G_k$. The imposed variable load $q_{imposed}$ is the characteristic variable load $Q_k$ (using the abbreviations from the Eurocode). For beam verification, the loads must be calculated per linear meter on the beam, unless the load is applied as a point load on the beam. We assume a uniformly distributed load.\n",
     "\n",
     "```{note}\n",
-    "To determine the amount of floor area resting on our beam, we use the schematic load-bearing floor plan (e.g. {numref}`floor_plan_with_shaded_area`). On it, we have shaded the area supported by the beam. All elements in the shaded area, including the weight of any secondary beams, must be included in the load. On this load-bearing floor plan we also show the actual dimensions.\n",
+    "To determine the amount of floor area resting on our beam, we use the schematic load-bearing floor plan (e.g. {numref}`floor_plan_with_shaded_area` below). On it, we have shaded the area supported by the beam. All elements in the shaded area, including the weight of any secondary beams, must be included in the load. On this load-bearing floor plan we also show the actual dimensions.\n",
     "```\n",
     "\n",
     "The resting load consists of the weight of the floor structure, including the weight of any finishing layer, ceiling, installations (air ducts, water pipes, electricity and data cables, also know as _building services_) suspended from the floor, or included in the floor structure, etc. All these loads are given in kN/m² or have to be converted into these units. For example, for a concrete overlay, the volumetric *mass* kg/m³ should be converted to the volumetric *weight* kN/m³: 1 kg/m³ corresponds to 0.01 kN/m³. The volumetric weight should is then multiplied by the layer thickness to arrive at the load in kN/m²:\n",
     "\n",
-    "$\\Rightarrow$ Load in [kN/m²] = layer thickness in meters multiplied by the load in [kN/m³].\n",
+    "$\\Rightarrow$ Load in [kN/m²] = layer thickness in meters multiplied by the specific weight in [kN/m³].\n",
     "\n",
     "In the figure below, the elements of the resting load for the construction are schematically depicted.\n",
     "\n",
@@ -171,11 +171,11 @@
     "\n",
     "The weight then becomes $\\Rightarrow$ $0.01 × 60 = 0.6 \\ [kN/m²]$.\n",
     "\n",
-    "The total (variable + permanent) load on the floor slabs then becomes $\\Rightarrow$ $3 + 1.0 + 0.6 = 4.6 [kN/m²]$.\n",
+    "The total (variable + permanent) load on the floor slabs (excluding the floor slabs themselves, excluding partial safety factors) then becomes $\\Rightarrow$ $3.0 + 1.0 + 0.6 = 4.6 \\ [kN/m²]$.\n",
     "\n",
-    "These data can be provided to the manufacturer. For a design calculation, the manufacturer often provides tables or graphs. In section \\ref{`hollow_core_slabs`}, such a graph is shown. On the vertical axis, we plot the load of 4.6 kN/m² and on the horizontal axis the span of $8 meters$. The intersection of both lines lies between the slab with a thickness of $150 \\ [mm]$ and that with a thickness of $200 \\ [mm]$. Therefore, for our building, we need a slab thickness of $200 [mm]$. The weight of this slab is $3.1 \\ [kN/m²]$.\n",
+    "These data can be provided to the manufacturer. For a design calculation, the manufacturer often provides tables or graphs. In section {ref}`hollow_core_slabs`, such a graph is shown. On the vertical axis, we plot the load of 4.6 kN/m² and on the horizontal axis the span of 8 m. The intersection of both lines lies between the slab with a thickness of 150 mm and that with a thickness of 200 mm. Therefore, for our building, we need a slab thickness of 200 mm. The weight of this slab is 3.1 kN/m².\n",
     "\n",
-    "So, the total permanent load of the floor is $3.1 [kN/m²] + 1.2 [kN/m²] + 0.6 [kN/m²] = 4.9 [kN/m²]$.\n",
+    "So, the total *permanent* load (without partial safety factor) of the floor is 3.1 + 1.0 + 0.6 = 4.7 kN/m² and the variable load is 3.0 kN/m².\n",
     "\n",
     "```{figure} Images/Load-Bearing_Floor_Plan_Loads.jpg\n",
     "---\n",
@@ -185,11 +185,11 @@
     "The shaded area of the floor is the area supported by the beam on axis 3\n",
     "```\n",
     "\n",
-    "The found load per square meter [kN/m^2] needs to be converted to a distributed load on the beam, or rather a load per linear meter of beam [kN/m]. To determine its magnitude, we use the schematic load-bearing floor plan. On the beam, we mark a distance of 1 meter and shade the area supported by this meter of the beam. The size of this area is equal to two times the half center-to-center distance of the beams times 1 meter.\n",
+    "The found load in kN/m² needs to be converted to an equally distributed load on the beam, which is a load per linear meter of beam [kN/m]. To determine its magnitude, we use the schematic load-bearing floor plan. On the beam, we mark a distance of 1 meter and shade the area supported by this meter of the beam. The size of this area is equal to two times the half center-to-center distance of the beams times 1 meter.\n",
     "\n",
-    "The load per linear meter [kN/m] then becomes $(a_1+a_2)/2 [m]$ times the load per square meter [kN/m^2].\n",
+    "The load per linear meter [kN/m] then becomes $(a_1+a_2)/2 [m]$ x the load per square meter [kN/m²].\n",
     "\n",
-    "For edge beams, of course, only half the center-to-center distance applies.\n",
+    "For edge beams (axis 1 and 5), of course, only half the center-to-center distance applies, as they are only loaded by floor slaps from one side.\n",
     "\n",
     "```{figure} Images/Schematic_Load-Bearing_Floor_Plan_Loads.jpg\n",
     "---\n",
@@ -198,21 +198,19 @@
     "The dark green area represents the load per linear meter on the beam on axis 3\n",
     "```\n",
     "\n",
-    "```{note}\n",
-    "For a concrete beam with a center-to-center distance of 8 meters:\n",
-    "$q_{rb} = \\frac{8}{2} + \\frac{8}{2} \\times 4.9 [kN/m^2] = 39.2 [kN/m]$\n",
+    "For a concrete beam with a center-to-center distance of 8 meters:  \n",
+    "$$\n",
+    "G_k = (\\frac{8}{2} + \\frac{8}{2}) \\times 4.7 \\ [kN/m^2] = 37.6 \\ [kN/m]\n",
+    "$$\n",
     "\n",
+    "```{note}\n",
+    "The imposed load for each function is prescribed in the Eurocodes. The building has an office function. As already assumed earlier, the corresponding imposed load is 3 kN/m². To make this a load per running metre of girder in kN/m, it should also be multiplied by two times half the centre-to-centre distance. \n",
     "```\n",
     "\n",
-    "```{note}\n",
-    "The imposed load for each function is prescribed in the Eurocodes. The building has an office function. The corresponding imposed load is $3 [kN/m^2]$. This load is given in [kN/m^2]. To make this a load per running metre of girder, it should also be multiplied by two times half the centre-to-centre distance. \n",
-    "```\n",
-    "\n",
-    "```{note}\n",
-    "For the imposed load on the concrete beam, the following applies:\n",
-    "$q_Q = q_{ob} = (\\frac{8}{2} + \\frac{8}{2}) \\cdot 3 [kN/m^2] = 24 [kN/m]$\n",
-    "\n",
-    "```"
+    "For the variable load on the concrete beam, the following applies:  \n",
+    "$$\n",
+    "Q_k = q_{imposed} = (\\frac{8}{2} + \\frac{8}{2}) \\times 3 \\ [kN/m^2] = 24 \\ [kN/m]\n",
+    "$$\n"
    ]
   },
   {
