--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -84,7 +84,7 @@
     "b = h/2 = \\frac{600}{2} = 300 \\ [mm]\n",
     "$$ \n",
     "\n",
-    "The weight per linear meter becomes: $0.30 × 0.60 × 2500 × 10/1000 = 4.5$ kN/m.\n",
+    "The weight per linear meter becomes: $q_{self} =0.30 × 0.60 × 2500 × 10/1000 = 4.5$ kN/m.\n",
     "\n",
     "```{tip}\n",
     "You can skip this part if you want to directly determine loads and reinforcement, as in nearly all cases tensile strength is exceeded and reinforcement is required. Continue with 'Determining loads on the beam'. However, if you also want to check deflections, then continue here, as you will need $I_y$.\n",
@@ -173,7 +173,7 @@
     "\n",
     "The total (variable + permanent) load on the floor slabs (excluding the floor slabs themselves, excluding partial safety factors) then becomes $\\Rightarrow$ $3.0 + 1.0 + 0.6 = 4.6 \\ [kN/m²]$.\n",
     "\n",
-    "These data can be provided to the manufacturer. For a design calculation, the manufacturer often provides tables or graphs. In section {ref}`hollow_core_slabs`, such a graph is shown. On the vertical axis, we plot the load of 4.6 kN/m² and on the horizontal axis the span of 8 m. The intersection of both lines lies between the slab with a thickness of 150 mm and that with a thickness of 200 mm. Therefore, for our building, we need a slab thickness of 200 mm. The weight of this slab is 3.1 kN/m².\n",
+    "These data can be provided to the manufacturer. For a design calculation, the manufacturer often provides tables or graphs. In section {numref}`hollow_core_slabs`, such a graph is shown. On the vertical axis, we plot the load of 4.6 kN/m² and on the horizontal axis the span of 8 m. The intersection of both lines lies between the slab with a thickness of 150 mm and that with a thickness of 200 mm. Therefore, for our building, we need a slab thickness of 200 mm. The weight of this slab is 3.1 kN/m².\n",
     "\n",
     "So, the total *permanent* load (without partial safety factor) of the floor is 3.1 + 1.0 + 0.6 = 4.7 kN/m² and the variable load is 3.0 kN/m².\n",
     "\n",
@@ -187,7 +187,7 @@
     "\n",
     "The found load in kN/m² needs to be converted to an equally distributed load on the beam, which is a load per linear meter of beam [kN/m]. To determine its magnitude, we use the schematic load-bearing floor plan. On the beam, we mark a distance of 1 meter and shade the area supported by this meter of the beam. The size of this area is equal to two times the half center-to-center distance of the beams times 1 meter.\n",
     "\n",
-    "The load per linear meter [kN/m] then becomes $(a_1+a_2)/2 [m]$ x the load per square meter [kN/m²].\n",
+    "The load per linear meter [kN/m] then becomes $(a/2+a/2 \\ [m])$ x the load per square meter [kN/m²].\n",
     "\n",
     "For edge beams (axis 1 and 5), of course, only half the center-to-center distance applies, as they are only loaded by floor slaps from one side.\n",
     "\n",
@@ -198,18 +198,20 @@
     "The dark green area represents the load per linear meter on the beam on axis 3\n",
     "```\n",
     "\n",
-    "For a concrete beam with a center-to-center distance of 8 meters:  \n",
-    "$$\n",
-    "G_k = (\\frac{8}{2} + \\frac{8}{2}) \\times 4.7 \\ [kN/m^2] = 37.6 \\ [kN/m]\n",
-    "$$\n",
-    "\n",
     "```{note}\n",
     "The imposed load for each function is prescribed in the Eurocodes. The building has an office function. As already assumed earlier, the corresponding imposed load is 3 kN/m². To make this a load per running metre of girder in kN/m, it should also be multiplied by two times half the centre-to-centre distance. \n",
     "```\n",
     "\n",
-    "For the variable load on the concrete beam, the following applies:  \n",
+    "For the central concrete beam on axis 3 with a center-to-center distance of 8 meters, and including the weight of the beam itself, the characteristic permanent load $G_k$ is:  \n",
+    "\n",
     "$$\n",
-    "Q_k = q_{imposed} = (\\frac{8}{2} + \\frac{8}{2}) \\times 3 \\ [kN/m^2] = 24 \\ [kN/m]\n",
+    "G_k = q_{self}+(\\frac{8}{2} + \\frac{8}{2}) \\times 4.7 \\ [kN/m^2] = 4.5 + 37.6 = 42.1\\ [kN/m]\n",
+    "$$\n",
+    "\n",
+    "For the characteristic variable load $Q_k$ on the concrete beam, the following applies:  \n",
+    "\n",
+    "$$\n",
+    "Q_k = (\\frac{8}{2} + \\frac{8}{2}) \\times 3 \\ [kN/m^2] = 24 \\ [kN/m]\n",
     "$$\n"
    ]
   },
