--- a/book/design/concrete/C02_rules_of_thumb.ipynb
+++ b/book/design/concrete/C02_rules_of_thumb.ipynb
@@ -65,6 +65,7 @@
     "```{figure} Images/Main_Floorbeams_h_d_z.jpg\n",
     "--- \n",
     "scale: 75%\n",
+    "name: Main_Floorbeams_h_d_z\n",
     "---\n",
     "Height h, effective height d and lever arm height z\n",
     "```  \n",
