--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -220,12 +220,14 @@
    "metadata": {},
    "source": [
     "## Check for ULS (strength)\n",
-    "With the loads determined above, we can perform the strength and stiffness check. For strength, we need to verify the Ultimate Limit State (ULS). For a beam supported at two points, we determine the maximum occurring bending stress: $\\sigma_{m;d}$. This must be less than the strength, that is: $\\sigma_{m;d} <= f_{m;d}$.\n",
-    "\n",
-    "The bending stress $\\sigma_{m;d} = \\frac{M_d}{W}$, where $W$ is the previously determined section modulus and $M_d$ is the maximum moment in the middle of the span (Figure 14).\n",
+    "With the loads determined above, we can perform the strength and stiffness check. For strength, we need to verify the Ultimate Limit State (ULS). For a beam in steel or timber supported at two points, we would now determine the maximum occurring bending stress $\\sigma_{m;d}$, which must be less than or equal to the bending strength: $\\sigma_{m;d} <= f_{m;d}$. However, for a concrete beam under regular loads as the one discussed in this chapter, we can safely assume the concrete will crack, as bending tensile strength is very limited. Steel reinforcement will take these tensile stresses, as shown in {numref}`concrete_rules_of_thumb`. A better step is to directly determine the necessary cross-sectional area of the steel reinforcement $A_{s;required}$ that is required to transfer the force $N_s$ in {numref}`Main_Floorbeams_h_d_z`.\n",
     "\n",
     "For the maximum moment: \n",
-    "$M_d = /frac{1}{8} \\cdot q_d \\cdot l^2$\n",
+    "\n",
+    "$$\n",
+    "M_d = \\frac{1}{8} \\cdot q_d \\cdot l^2\n",
+    "$$\n",
+    "\n",
     "where $l$ is the length of the beam and $q$ is the total line load. Be consistent with the units!\n",
     "\n",
     "```{figure} Images/Maximum_Moment_Beam.jpg\n",
@@ -235,7 +237,7 @@
     "Maximum moment for beam on two supports and equally distributed load.\n",
     "```\n",
     "\n",
-    "For the Ultimate Limit State (ULS), we need to apply the so-called Fundamental Load Combination. The loads must be multiplied by a partial factor $\\gamma_{f}$ (formerly known as load or safety factors) to ensure additional safety. These factors depend on the consequence class of the building and the nature of the load. $\\gamma_{G}$ and $\\gamma_{Q}$ are the partial factors for the permanent load and the variable load, respectively.\n",
+    "For the Ultimate Limit State (ULS), we need to apply the so-called Fundamental Load Combination. The loads must be multiplied by a partial factor $\\gamma_{f}$ to ensure additional safety. These factors depend on the consequence class of the building and the nature of the load. $\\gamma_{G}$ and $\\gamma_{Q}$ are the partial factors for the permanent load and the variable load, respectively.\n",
     "\n",
     "According to Eurocode 1990, the permanent load may be reduced by a reduction factor $ξ$. This is set at 0.89 in the National Annex to the Eurocode. For most buildings (including offices), $\\gamma_{G}$ is 1.35 and $\\gamma_{Q}$ is 1.5. The partial factor for the permanent load is multiplied by the reduction factor: $0.89 × 1.35 = 1.2$ (the value of the former load factor for the permanent load). We will use this value as the partial factor for the permanent load. Therefore, for the office building: $q_{ULS} = 1.2 \\cdot q_G + 1.5 \\cdot q_Q$. With these quantities, we can calculate the moment and thus the bending stress, and then check the strength by performing the unity check (U.C.):\n",
     "\n",
