--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -220,15 +220,15 @@
    "metadata": {},
    "source": [
     "## Check for ULS (strength)\n",
-    "With the loads determined above, we can perform the strength and stiffness check. For strength, we need to verify the Ultimate Limit State (ULS). For a beam in steel or timber supported at two points, we would now determine the maximum occurring bending stress $\\sigma_{m;d}$, which must be less than or equal to the bending strength: $\\sigma_{m;d} <= f_{m;d}$. However, for a concrete beam under regular loads as the one discussed in this chapter, we can safely assume the concrete will crack, as bending tensile strength is very limited. Steel reinforcement will take these tensile stresses, as shown in {numref}`concrete_rules_of_thumb`. A better step is to directly determine the necessary cross-sectional area of the steel reinforcement $A_{s;required}$ that is required to transfer the force $N_s$ in {numref}`Main_Floorbeams_h_d_z`.\n",
+    "With the loads determined above, we can perform the strength and stiffness check. For strength, we need to verify the Ultimate Limit State (ULS). For a beam in steel or timber supported at two points, we would now determine the maximum occurring bending stress $\\sigma_{m;d}$, which must be less than or equal to the bending strength: $\\sigma_{m;d} \\le f_{m;d}$. However, for a concrete beam under regular loads as the one discussed in this chapter, we can safely assume the concrete *will* crack, as bending tensile strength is very limited. Steel reinforcement will take these tensile stresses, as shown in {numref}`concrete_rules_of_thumb`. Therefor, a smarter step is to directly determine the necessary cross-sectional area of the steel reinforcement $A_{s;required}$ that is required to transfer the force $N_s$ in {numref}`Main_Floorbeams_h_d_z` and see if this fits in the cross-section dimensions of the beam chosen earlier.\n",
     "\n",
-    "For the maximum moment: \n",
+    "First we need to calculate the maximum bending moment which for this simple case is: \n",
     "\n",
     "$$\n",
     "M_d = \\frac{1}{8} \\cdot q_d \\cdot l^2\n",
     "$$\n",
     "\n",
-    "where $l$ is the length of the beam and $q$ is the total line load. Be consistent with the units!\n",
+    "where $l$ is the length of the beam [m] and $q$ is the total line load [kN/m]. Be consistent with the units!\n",
     "\n",
     "```{figure} Images/Maximum_Moment_Beam.jpg\n",
     "---\n",
@@ -237,54 +237,33 @@
     "Maximum moment for beam on two supports and equally distributed load.\n",
     "```\n",
     "\n",
-    "For the Ultimate Limit State (ULS), we need to apply the so-called Fundamental Load Combination. The loads must be multiplied by a partial factor $\\gamma_{f}$ to ensure additional safety. These factors depend on the consequence class of the building and the nature of the load. $\\gamma_{G}$ and $\\gamma_{Q}$ are the partial factors for the permanent load and the variable load, respectively.\n",
-    "\n",
-    "According to Eurocode 1990, the permanent load may be reduced by a reduction factor $ξ$. This is set at 0.89 in the National Annex to the Eurocode. For most buildings (including offices), $\\gamma_{G}$ is 1.35 and $\\gamma_{Q}$ is 1.5. The partial factor for the permanent load is multiplied by the reduction factor: $0.89 × 1.35 = 1.2$ (the value of the former load factor for the permanent load). We will use this value as the partial factor for the permanent load. Therefore, for the office building: $q_{ULS} = 1.2 \\cdot q_G + 1.5 \\cdot q_Q$. With these quantities, we can calculate the moment and thus the bending stress, and then check the strength by performing the unity check (U.C.):\n",
-    "\n",
-    "$$\n",
-    "U.C. = \\frac{\\sigma_{m,d}}{f_{m,d}} <= 1.0\n",
-    "$$\n",
-    "\n",
-    "If the $U.C. > 1.0$, then a stronger profile is needed. For the $W_{required}$ of the new profile, the following applies:\n",
-    "\n",
-    "$$\n",
-    "W_{required} = U.C. \\cdot W_{old}\n",
-    "$$\n",
-    "\n",
     "````{margin}\n",
     "**M-lines**\n",
     "```{figure} ../safety/Images/design_process_7.jpg\n",
     "```\n",
     "The moments on the beams are determined.\n",
     "\n",
+    "\n",
+    "For the Ultimate Limit State (ULS), we need to apply the so-called Fundamental Load Combination. The loads must be multiplied by a partial factor $\\gamma_{f}$ to ensure additional safety. These factors depend on the consequence class of the building and the nature of the load. $\\gamma_{G}$ and $\\gamma_{Q}$ are the partial factors for the permanent load and the variable load, respectively.\n",
+    "\n",
+    "According to Eurocode 1990, the permanent load may be reduced by a reduction factor $ξ$. This is set at 0.89 in the National Annex to the Eurocode. For most buildings (including offices), $\\gamma_{G}$ is 1.35 and $\\gamma_{Q}$ is 1.5. The partial factor for the permanent load is multiplied by the reduction factor: $0.89 × 1.35 = 1.2$ (the value of the former load factor for the permanent load). We will use this value as the partial factor for the permanent load. Therefore, for the office building: $q_{ULS} = 1.2 \\cdot q_G + 1.5 \\cdot q_Q$. With these quantities, we can calculate the moment and thus the bending stress, and then check the strength by performing the unity check (U.C.):\n",
+    "\n",
+    "$$\n",
+    "Q_d = \\gamma_G \\cdot G_k + \\gamma_Q \\cdot Q-K = 1.2 \\cdot 42.1 + 1.5 \\cdot 24 = 86.5 [kN/m]\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "M_d = \\frac{1}{8} \\cdot 86.5 \\cdot 6^2 = 389 [kNm]\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "**Check ULS**\n",
     "```{figure} ../safety/Images/design_process_8.jpg\n",
     "```\n",
     "Then the unity check is performed for the ULS state.\n",
-    "````\n",
-    "\n",
-    "```{note}\n",
-    "For the concrete beam, the steps:\n",
-    "\n",
-    "$q_{ULS} = 1.2 \\cdot (4.5 [kN/m] + 39.2 [kN/m]) + 1.5 \\cdot 24 [kN/m] = 88.4 [kN/m]$\n",
-    "\n",
-    "$M_d = \\frac{1}{8} \\cdot q_{ULS} \\cdot l^2 = \\frac{1}{8} \\cdot 88.4 [kN/m] \\cdot 6^2 = 398.0 [kNm] = 398 \\cdot 10^6 [Nmm]$\n",
-    "\n",
-    "$sigma_{m,d} = \\dfrac{M_d}{W} = \\dfrac{398 \\cdot 10^6 [Nmm]}{18 \\cdot 10^6 [mm^4]} = 22.06 [N/mm^2]$\n",
-    "\n",
-    "$f_{m;d} = 20 [N/mm^2] \\Rightarrow U.C. = \\dfrac{\\sigma_{m,d}}{f_{m;d}} = \\dfrac{22.1 [N/mm^2]}{20 [N/mm^2]}$ = 1.1 > 1$\\Rightarrow$ $\\textcolor{red}{\\text{Does not comply}}$\n",
-    "\n",
-    "This shows that the beam is too slender. We need a beam with a larger section modulus \\(W\\).\n",
-    "\n",
-    "$W_{required} = 1.1 \\cdot 18.0 \\cdot 10^6 [mm^3] = 19.80 \\cdot 10^6 [mm^3]$\n",
-    "\n",
-    "This corresponds to a minimum cross-section of $630 \\cdot 300 mm^2$ \n",
-    "\n",
-    "$g = 4.73 [kN/m]$, $W = 19.85 \\cdot 10^6 [mm^3]$, and $I = 6251.2 \\cdot 10^6 [mm^4]$.\n",
-    "\n",
-    "If we want to limit the construction height, we can choose (prefabricated) concrete with a higher strength class. C35/45 with an $f_{m;d} = f_{c;d} = 23.3 [N/mm^2]$. For this strength class, the beam $600 \\cdot 300 [mm^2]$ will comply.\n",
-    "\n",
-    "```"
+    "````"
    ]
   },
   {
