--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -241,22 +241,24 @@
     "**M-lines**\n",
     "```{figure} ../safety/Images/design_process_7.jpg\n",
     "```\n",
-    "The moments on the beams are determined.\n",
-    "\n",
-    "\n",
+    "The moments on the beams are determined.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "For the Ultimate Limit State (ULS), we need to apply the so-called Fundamental Load Combination. The loads must be multiplied by a partial factor $\\gamma_{f}$ to ensure additional safety. These factors depend on the consequence class of the building and the nature of the load. $\\gamma_{G}$ and $\\gamma_{Q}$ are the partial factors for the permanent load and the variable load, respectively.\n",
     "\n",
     "According to Eurocode 1990, the permanent load may be reduced by a reduction factor $ξ$. This is set at 0.89 in the National Annex to the Eurocode. For most buildings (including offices), $\\gamma_{G}$ is 1.35 and $\\gamma_{Q}$ is 1.5. The partial factor for the permanent load is multiplied by the reduction factor: $0.89 × 1.35 = 1.2$ (the value of the former load factor for the permanent load). We will use this value as the partial factor for the permanent load. Therefore, for the office building: $q_{ULS} = 1.2 \\cdot q_G + 1.5 \\cdot q_Q$. With these quantities, we can calculate the moment and thus the bending stress, and then check the strength by performing the unity check (U.C.):\n",
     "\n",
     "$$\n",
-    "Q_d = \\gamma_G \\cdot G_k + \\gamma_Q \\cdot Q-K = 1.2 \\cdot 42.1 + 1.5 \\cdot 24 = 86.5 [kN/m]\n",
+    "Q_d = \\gamma_G \\cdot G_k + \\gamma_Q \\cdot Q-K = 1.2 \\cdot 42.1 + 1.5 \\cdot 24 = 86.5 \\ [kN/m]\n",
     "$$\n",
     "\n",
     "$$\n",
-    "M_d = \\frac{1}{8} \\cdot 86.5 \\cdot 6^2 = 389 [kNm]\n",
+    "M_d = \\frac{1}{8} \\cdot 86.5 \\cdot 6^2 = 389 \\ [kNm]\n",
     "$$\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "**Check ULS**\n",
