--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -253,12 +253,34 @@
     "According to Eurocode 1990, the permanent load may be reduced by a reduction factor $ξ$. This is set at 0.89 in the National Annex to the Eurocode. For most buildings (including offices), $\\gamma_{G}$ is 1.35 and $\\gamma_{Q}$ is 1.5. The partial factor for the permanent load is multiplied by the reduction factor: $0.89 × 1.35 = 1.2$ (the value of the former load factor for the permanent load). We will use this value as the partial factor for the permanent load. Therefore, for the office building: $q_{ULS} = 1.2 \\cdot q_G + 1.5 \\cdot q_Q$. With these quantities, we can calculate the moment and thus the bending stress, and then check the strength by performing the unity check (U.C.):\n",
     "\n",
     "$$\n",
-    "Q_d = \\gamma_G \\cdot G_k + \\gamma_Q \\cdot Q-K = 1.2 \\cdot 42.1 + 1.5 \\cdot 24 = 86.5 \\ [kN/m]\n",
+    "Q_d = \\gamma_G \\cdot G_k + \\gamma_Q \\cdot Q_k = 1.2 \\cdot 42.1 + 1.5 \\cdot 24 = 86.5 \\ [kN/m]\n",
     "$$\n",
     "\n",
     "$$\n",
     "M_d = \\frac{1}{8} \\cdot 86.5 \\cdot 6^2 = 389 \\ [kNm]\n",
     "$$\n",
+    "\n",
+    "Using Method 1 from {numref}`concrete_rules_of_thumb` we find:\n",
+    "\n",
+    "$$\n",
+    "A_{s;required} \\approx \\frac{M_d}{0.35 \\cdot h}= \\frac{389}{0.35 \\cdot 0.60}=1852 \\  [mm^2]\n",
+    "$$\n",
+    "\n",
+    "If we use reinforcement bars with a diameter Ø20 ($A_s=314$ mm² each) we would need $n=1852/201=5.9$ bars, which rounds (always up) to 6. We suspect that the distance between the rebar becomes too small to let concrete through:\n",
+    "\n",
+    "```{figure} sketch_of_rebar_distance.jpg\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
+    "Sketch of rebar distance (here only 5 bars are used)\n",
+    "```\n",
+    "\n",
+    "We suspect that we need a slightly higher cross-section than the one based on the used rule of thumb $h=L/10$. We could also make the cross-section wider (increase b) but this seems a bit waste of concrete if it just serves to increase rebar distance. Let's increase $h$ to $h=L/9=650 mm$ which should increase the lever arm and make lead to less reinforcement. The self weight increases with a factor $650/600=1.08$ which for now will be neglected, as the self-weight of the beam is only small proportion of the total load $q_d$.\n",
+    "\n",
+    "$$\n",
+    "A_{s;required} \\approx \\frac{M_d}{0.35 \\cdot h}= \\frac{389}{0.35 \\cdot 0.65}=1709 \\  [mm^2]\n",
+    "$$\n",
+    "\n",
     "\n",
     "\n",
     "**Check ULS**\n",
