--- a/book/basics/sustainable_properties_materials.ipynb
+++ b/book/basics/sustainable_properties_materials.ipynb
@@ -81,8 +81,8 @@
     "\n",
     "### Material Costs\n",
     "- Steel is known for its high strength-to-weight ratio, which can result in a lighter overall structure.\n",
-    "- The cost of steel fluctuates with market conditions but generally ranges from USD 1,200 to 2,500 per ton.\n",
-    "- The cost per square meter typically falls between USD 50 and 150, depending on the complexity and design of the structure.\n",
+    "- The cost of steel fluctuates strongly with market conditions but is in the range 4 to 5 EUR/kg (January 2026), not the raw material but processed structural steel including end plates, cutting, drilling, protection layers.\n",
+    "- The cost per square meter typically falls between 200 to 350 EUR/m2, depending on the complexity and design of the structure (here a simple   steel roof of 50 kg/m2 is chosen as structure for the lower boundary).\n",
     "\n",
     "### Labor Costs\n",
     "- Steel structures often require skilled labor for welding and assembly.\n",
